@@ -50,7 +50,9 @@ namespace Astroid {
     time_t start = clock ();
     query =  notmuch_query_create (db->nm_db, query_string.c_str ());
 
-    notmuch_query_add_tag_exclude (query, db->muted.c_str());
+    for (ustring & t : db->excluded_tags) {
+      notmuch_query_add_tag_exclude (query, t.c_str());
+    }
     notmuch_query_set_omit_excluded (query, NOTMUCH_EXCLUDE_TRUE);
 
     /* notmuch_query_count_threads is destructive.
@@ -77,14 +79,18 @@ namespace Astroid {
     /* stats */
     log << debug << "ti: refresh stats." << endl;
     notmuch_query_t * query_t =  notmuch_query_create (dbs->nm_db, query_string.c_str ());
-    notmuch_query_add_tag_exclude (query_t, dbs->muted.c_str());
+    for (ustring & t : db->excluded_tags) {
+      notmuch_query_add_tag_exclude (query_t, t.c_str());
+    }
     notmuch_query_set_omit_excluded (query_t, NOTMUCH_EXCLUDE_TRUE);
     total_messages = notmuch_query_count_messages (query_t); // destructive
     notmuch_query_destroy (query_t);
 
     ustring unread_q_s = "(" + query_string + ") AND tag:unread";
     notmuch_query_t * unread_q = notmuch_query_create (dbs->nm_db, unread_q_s.c_str());
-    notmuch_query_add_tag_exclude (unread_q, dbs->muted.c_str());
+    for (ustring & t : db->excluded_tags) {
+      notmuch_query_add_tag_exclude (unread_q, t.c_str());
+    }
     notmuch_query_set_omit_excluded (unread_q, NOTMUCH_EXCLUDE_TRUE);
     unread_messages = notmuch_query_count_messages (unread_q); // destructive
     notmuch_query_destroy (unread_q);
