@@ -5,6 +5,7 @@
 * Poll-script output is logged incrementally
 * Got a desktop file!
 * Different color of font and border of the first levels of quotes
+* Configurable exclude tags
 
 == v0.2 / 2015-01-18
 
